remove posgres routes, subject for testing and rollback
